# dan-computer-use-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  ONE_LINER.md  README.md  dan-mcp-config.json  mcp.json  pyproject.toml  run-mcp.sh  server.json  start-mcp.sh  test_mcp.py
docs/: ARCHITECTURE.md
src/dan_computer_use_mcp/: __main__.py  server.py  voice.py
tests/: test_server.py
