[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dan-computer-use-mcp"
version = "1.0.0"
description = "Cross-platform computer control MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "DanLab", email = "danlab@danlab.dev"}]
keywords = ["mcp", "computer-use", "automation", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.9.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pyautogui>=0.9.54",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
dan-computer-use-mcp = "dan_computer_use_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
